--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/nicesystems/job/or1Nafw9'>NICE Careers - Professional Services Intern - Japan</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://axa.referrals.selectminds.com/jobs/internship-2019-%E2%80%93-2020-%E2%80%93-insurance-professional-life-insurance-5748'>Internship (2019 ? 2020) ? Insurance Professional - Life Insurance - AXA | Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://axa.referrals.selectminds.com/jobs/internship-2019-%E2%80%93-2020-%E2%80%93-insurance-professional-sme-auto-p-c-corporate-5751'>Internship (2019 ? 2020) ? Insurance Professional - SME Auto (P&C Corporate) - AXA | Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://cameo.breezy.hr/p/9aeb18b6bb10-social-media-manager-internship-contract'>Social Media Manager (Internship / Contract) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -219,7 +231,7 @@
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409298/tip-technology-internship-program/?TrackID=97736'>TIP  Technology Internship Program job with Travelers Insurance | 6409298</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409298/tip-technology-internship-program/?TrackID=97736'>TIP  Technology Internship Program job with Travelers Insurance | 6409298</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -227,7 +239,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -263,7 +275,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/retirement-actuarial-internship-summer-2020-12021'>Retirement Actuarial Internship (Summer 2020) - Willis Towers Watson Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/retirement-actuarial-internship-summer-2020-12021'>Retirement Actuarial Internship (Summer 2020) - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -444,19 +456,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/SeatSwapInc/743999698393763-graphic-web-design-internship'>SeatSwap, Inc. Graphic/Web Design Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madison New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/467463-internship-m-f-d-indexing-research'>Job @ Solactive  (Frankfurt): Internship (m/f/d) I... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/mtc/job/oRbjbfwg'>Management & Training Corporation Careers - Substance Abuse Counselor Intern - $1,500 in incentives</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://apply.workable.com/iland-internet-solutions-corporation/'>iland Internet Solutions Corporation - Current Openings</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 16, 2019 ... Cloud Operations Engineer - VMware. TechnologyHouston, Texas, United States
-Full timeCOE-HOU-041219. Posted 11 days ago?...</p>
 <hr/>
 
 
