--- a/data-science.html
+++ b/data-science.html
@@ -71,7 +71,15 @@
   
       
 <!--Begin body here --> 
-<h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4491917002'>Job Application for Data Scientist at ShopStyle</a></h5> 
+<p><span class="badge badge-light">San Mateo</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prosperity.ie/jobs/show/930678144-head-of-data-science'>Head of Data Science Job</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -115,7 +123,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/476b618d-0d73-45f8-89a2-c3887c7d6d95'>Wealthfront - Data Science Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/476b618d-0d73-45f8-89a2-c3887c7d6d95'>Wealthfront - Data Science Intern</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -123,11 +131,11 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/howden/49615867-9155-474e-9931-bde2b08f8057'>Howden - Software & Data Science Engineer - Digital Solutions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/howden/49615867-9155-474e-9931-bde2b08f8057'>Howden - Software & Data Science Engineer - Digital Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -147,7 +155,7 @@
 <p><span class="badge badge-light">Vilnius  Vilnius Berlin Prague Warsaw</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/patientpop/jobs/1922324'>Job Application for Data Science Manager at PatientPop</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientpop/jobs/1922324'>Job Application for Data Science Manager at PatientPop</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -171,7 +179,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -179,7 +187,7 @@
 <p><span class="badge badge-light">United States  Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -203,7 +211,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -261,7 +269,7 @@
 statistical methods, such as regression analysis and machine learning, to 
 address?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
+<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
@@ -453,7 +461,7 @@ CA.</p>
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -480,14 +488,6 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <hr/>
 <h5><a href='https://jobs.lever.co/the-yes/1f314ee5-46c8-4465-8e56-22128881911a'>The Yes - Data Science & Analytics Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/fanduel/jobs/1140623'>Job Application for Data Scientist  at FanDuel</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/corescientific/jobs/4277078002'>Job Application for Data Scientist at Core Scientific</a></h5> 
-<p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
