--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,14 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1926447'>Job Application for Network Operations Center (NOC) Customer Data Analyst at Bandwidth</a></h5> 
+<p><span class="badge badge-light">Raleigh, NC</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<p><span class="badge badge-light">United States San Francisco</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/esolutionsinc/jobs/1935373'>Job Application for Data Analyst  at eSolutions, Inc.</a></h5> 
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -103,7 +111,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Oklahoma City United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -159,7 +167,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
+<h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -255,7 +263,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/8ExBy4S4nl/Sr-Business-Data-Analyst-Mountain-View-CA'>Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/8ExBy4S4nl/Sr-Business-Data-Analyst-Mountain-View-CA'>Sr. Business Data Analyst (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -289,7 +297,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -392,7 +400,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/9LZKEhjIxX/Robotics-Data-Analyst'>Robotics Data Analyst - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/9LZKEhjIxX/Robotics-Data-Analyst'>Robotics Data Analyst - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -446,7 +454,7 @@ organization?...</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centurycommunities/job/ogKpbfwk'>Century Communities Careers - IT System Developer/Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centurycommunities/job/ogKpbfwk'>Century Communities Careers - IT System Developer/Data Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -481,18 +489,6 @@ organization?...</p>
 <hr/>
 <h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
-      Language Data Analyst - Spanish and English Speakers - TransPerfect
-    </a></h5> 
-<p><span class="badge badge-light">Tempe, ?tats-Unis</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://sokratipune.recruiterbox.com/jobs/fk0go4/'>
-    Data Analyst  at Merkle Sokrati
-</a></h5> 
-<p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
